--- a/templates/home.html
+++ b/templates/home.html
@@ -1,15 +1,19 @@
 {% extends "layout.html"%}{% block content%}
 
-<form method="GET" action={{ url_for('home') }}>
+<form method="POST" action={{ url_for('add') }}>
  {{ add_form.csrf_token }}
  {{ add_form.name }}
  {{add_form.description}}
- {{ add_form.submit }}
+ {{ add_form.add_submit }}
 </form>
-<form method="GET" action={{ url_for('home') }}>
+<form method="POST" action={{ url_for('delete') }}>
  {{ delete_form.csrf_token }}
  {{ delete_form.name }}
- {{ delete_form.submit }}
+ {{ delete_form.delete_submit }}
+</form>
+<form method="POST" action={{url_for('clear')}}>
+  {{clear_form.csrf_token}}
+  {{clear_form.clear_submit}}
 </form>
 <ul>
   {%for item in list%}
