--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html>
   <head>
-    <link rel='stylesheet' href = '\static\css\style.css'>
+    <link rel='stylesheet' href = '../static/css/style.css'>
   </head>
   <body>
-      {% block content %} {% endblock %}
+    {%include "header.html"%}
+    {% block content %} {% endblock %}
   </body>
 </html>
