--- a/templates/home.html
+++ b/templates/home.html
@@ -1,15 +1,10 @@
 {% extends "layout.html"%}{% block content%}
-{% from 'macro.html' import error_field %}
-{% if error == True%}
-<p> Error: Name or Description too long</p>
-{% endif%}
 <form method="POST" action={{ url_for('add') }}>
  {{add_form.csrf_token}}
  {{add_form.name}}
  {{add_form.description}}
  {{ add_form.add_submit }}
 </form>
-{{error_field(add_form)}}
 <form method="POST" action='/deletename'}}>
  {{ delete_form.csrf_token }}
  {{ delete_form.name }}
@@ -37,7 +32,7 @@
 </ul>
 
 <script>
-  function MyFunction(idnum) {
+  function MyFunction(idnum) { // Edit button that hides and closes.
     var x = document.getElementById(idnum);
     if(x.style.display === "none"){
       x.style.display = "block";
