--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,13 @@
 {% extends "layout.html"%}{% block content%}
-<form method="POST" action={{ url_for('add') }}>
+<a href={{url_for('createuser')}}>
+Create user
+</a>
+<br>
+<a href={{url_for('loginuser')}}>
+  Login 
+</a>
+
+<form method="POST" action={{url_for('add')}}>
  {{add_form.csrf_token}}
  {{add_form.name}}
  {{add_form.description}}
