added login and flash messages

--- a/templates/createuser.html
+++ b/templates/createuser.html
@@ -4,6 +4,6 @@
     {{register_form.csrf_token }}
     {{register_form.name}}
     {{register_form.password}}
-    {{register_form.login_submit}}
+    {{register_form.register_submit}}
 </form>
 {% endblock %}
